--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,27 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "app.js",
-        "use": "@now/node"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
+        }
     ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.js"
-      }
+    "routes":[
+        {
+            "src": "/api/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/",
+            "dest": "public/index.html"
+        },
+        {
+            "src": "/(.+)",
+            "dest": "public/$1"
+        }
     ]
-  }
+}
