--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "web": "node app.js"
+    "start": "node app.js",
+    "build": "node build --output public"
   },
   "author": "",
   "license": "ISC",
